--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div id="hour-8" class="row time-block">
+          <div class="col-md-1 hour">
+              8:00
+          </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
