Added a input tag in the hour-8 div element so that a user can input text for their hourly task to eventually be saved to local storage.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <div class="col-md-1 hour">
               8:00
           </div>
+          <input class="col-md-10 description" placeholder="Hourly Task">
       </div>
     </div>
 
