Removed the i button hover effect from the CSS and just made a regular button hover effect where the emoji and the text increases in size. The italics looked awkward in my opinion. Aligned the text within the button. Added an emoji in the button. Added the button in general. Looks cool to me.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               8:00
           </div>
           <input class="col-md-10 description" placeholder="Hourly Task">
+          <button class="saveBtn col-md-1" style="text-align: center;">💾<br/>Save</button>
       </div>
     </div>
 
