Changed the input field into a textarea tag since the CSS is using textarea for the input field.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="col-md-1 hour">
               8:00
           </div>
-          <input class="col-md-10 description" placeholder="Hourly Task">
+          <textArea class="col-md-10 description" placeholder="Hourly Task"></textArea>
           <button class="saveBtn col-md-1" style="text-align: center;">💾<br/>Save</button>
       </div>
     </div>
