Added functionality to the save button. The save button now stores a key, the time of the task, and a value, the description within the task text field.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
     <div class="container">
         <!-- Timeblocks go here -->
-        <div id="hour-8" class="row time-block">
-            <div class="col-md-1 hour">
+        <div id="hour08" class="time-block row">
+            <div class="hour col-md-1">
                 8:00
             </div>
-            <textArea class="col-md-10 description" placeholder="Hourly Task"></textArea>
-            <button class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
+            <textArea class="description col-md-10" placeholder="Hourly Task"></textArea>
+            <button id="saveButton" class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
         </div>
     </div>
 
