Added all of the necessary time blocks in the HTML.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,77 @@
             <textArea class="description col-md-10" placeholder="Hourly Task"></textArea>
             <button id="saveButton08" class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
         </div>
+
         <div id="hour09" class="time-block row">
             <div class="hour col-md-1">
                 9:00
             </div>
             <textArea class="description col-md-10" placeholder="Hourly Task"></textArea>
             <button id="saveButton09" class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
+        </div>
+
+        <div id="hour10" class="time-block row">
+            <div class="hour col-md-1">
+                10:00
+            </div>
+            <textArea class="description col-md-10" placeholder="Hourly Task"></textArea>
+            <button id="saveButton10" class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
+        </div>
+
+        <div id="hour11" class="time-block row">
+            <div class="hour col-md-1">
+                11:00
+            </div>
+            <textArea class="description col-md-10" placeholder="Hourly Task"></textArea>
+            <button id="saveButton11" class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
+        </div>
+
+        <div id="hour12" class="time-block row">
+            <div class="hour col-md-1">
+                12:00
+            </div>
+            <textArea class="description col-md-10" placeholder="Hourly Task"></textArea>
+            <button id="saveButton12" class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
+        </div>
+
+        <div id="hour13" class="time-block row">
+            <div class="hour col-md-1">
+                1:00
+            </div>
+            <textArea class="description col-md-10" placeholder="Hourly Task"></textArea>
+            <button id="saveButton13" class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
+        </div>
+
+        <div id="hour14" class="time-block row">
+            <div class="hour col-md-1">
+                2:00
+            </div>
+            <textArea class="description col-md-10" placeholder="Hourly Task"></textArea>
+            <button id="saveButton14" class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
+        </div>
+
+        <div id="hour15" class="time-block row">
+            <div class="hour col-md-1">
+                3:00
+            </div>
+            <textArea class="description col-md-10" placeholder="Hourly Task"></textArea>
+            <button id="saveButton15" class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
+        </div>
+
+        <div id="hour16" class="time-block row">
+            <div class="hour col-md-1">
+                4:00
+            </div>
+            <textArea class="description col-md-10" placeholder="Hourly Task"></textArea>
+            <button id="saveButton16" class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
+        </div>
+
+        <div id="hour17" class="time-block row">
+            <div class="hour col-md-1">
+                5:00
+            </div>
+            <textArea class="description col-md-10" placeholder="Hourly Task"></textArea>
+            <button id="saveButton17" class="saveBtn col-md-1" style="text-align: center;">💾<br />Save</button>
         </div>
     </div>
 
